--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="projectApp">
   <head>
+    <base href="/">
     <meta charset="utf-8">
     <title>WDI Project 3</title>
     <!-- inject:js -->
@@ -8,6 +9,24 @@
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="MainCtrl as main" ng-class="main.pageName">
+
+    <a ui-sref="projectsIndex">All Projects</a>
+    <a ui-sref="projectsNew">Add Projects</a>
+    <a ui-sref="login">Login</a>
+    <a ui-sref="register">Register</a>
+    <a ui-sref="usersShow">Profile</a>
+    <a href="#" ng-click="main.logout()">Logout</a>
+
+
+    <div class ="container">
+      <!-- <div class = "message" ng-if="main.message"> -->
+        <!-- <p>{{main.message}}</p> -->
+      <!-- </div> -->
+
+      <main ui-view></main>
+      {{2+2}}
+    </div>
+
   </body>
 </html>
