--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <base href="/">
     <meta charset="utf-8">
     <title>WDI Project 3</title>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs_jyxXu7PGnWJz9uYx-dwJ4mmmaM3sF8"></script>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
