--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <base href="/">
     <meta charset="utf-8">
     <title>WDI Project 3</title>
+    <script src="https://use.fontawesome.com/9c2082c665.js"></script>
 
+    <!-- <link rel="stylesheet" href="../src/scss/font-mfizz.css"> -->
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
