Tect icons added and visable

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,14 @@
     <base href="/">
     <meta charset="utf-8">
     <title>WDI Project 3</title>
-    <script src="https://use.fontawesome.com/9c2082c665.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway:200" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs_jyxXu7PGnWJz9uYx-dwJ4mmmaM3sF8"></script>
-
-    <!-- <link rel="stylesheet" href="../src/scss/font-mfizz.css"> -->
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway:200" rel="stylesheet">
+
   </head>
 
   <body ng-controller="MainCtrl as main" ng-class="main.pageName" class="container">
