news api completed

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
         <a class="nav-link" ui-sref="events" ng-if="main.isAuthenticated()">Events</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" ui-sref="news" ng-if="main.isAuthenticated()">News</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" ui-sref="login" ng-if="!main.isAuthenticated()">Login</a>
       </li>
       <li class="nav-item">
