Added some styling

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html ng-app="projectApp">
 
   <head>
+
     <base href="/">
     <meta charset="utf-8">
     <title>WDI Project 3</title>
@@ -17,42 +18,56 @@
 
   </head>
 
-  <body ng-controller="MainCtrl as main" ng-class="main.pageName" class="container">
+  <body ng-controller="MainCtrl as main" ng-class="main.pageName">
 
+    <nav class="navbar navbar-default" role="navigation">
 
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="projectsIndex" ng-if="main.isAuthenticated()">Project Index</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="projectsNew" ng-if="main.isAuthenticated()">Add Project</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="events" ng-if="main.isAuthenticated()">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="news" ng-if="main.isAuthenticated()">News</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="login" ng-if="!main.isAuthenticated()">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="register" ng-if="!main.isAuthenticated()">Register</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" ui-sref="usersShow({id: main.currentUserId })" ng-if="main.isAuthenticated()">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login" ng-click="main.logout()" ng-if="main.isAuthenticated()">Logout</a>
-      </li>
-    </ul>
+        <div class="navbar-header">
+    			<button type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
+    				<span class="sr-only">Toggle navigation</span>
+    				<span class="icon-bar"></span>
+    				<span class="icon-bar"></span>
+    				<span class="icon-bar"></span>
+    			</button>
+    			<a class="navbar-brand" ui-sref="home">DevBook</a>
+    		</div>
+    		<div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
+    			<ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="projectsIndex" ng-if="main.isAuthenticated()">Project Index</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="projectsNew" ng-if="main.isAuthenticated()">Add Project</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="events" ng-if="main.isAuthenticated()">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="news" ng-if="main.isAuthenticated()">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="login" ng-if="!main.isAuthenticated()">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="register" ng-if="!main.isAuthenticated()">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ui-sref="usersShow({id: main.currentUserId })" ng-if="main.isAuthenticated()">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login" ng-click="main.logout()" ng-if="main.isAuthenticated()">Logout</a>
+            </li>
+    			</ul>
+    		</div>
+    	</nav>
 
-    <div class ="container main-container">
+    <div>
+
       <div class="message" ng-if="main.message">
         <p>{{main.message}}</p>
       </div>
 
-      <main ui-view ></main>
+      <main ui-view></main>
 
     </div>
 
