More styling done

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,30 @@
 
     </div>
 
+    <!-- <footer>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <div>
+                <h3>DevBook, Created by Angela, Nimesh & Clare</h3>
+              </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+              <div>
+                <h3>DevBook, Created by Angela, Nimesh & Clare</h3>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </footer> -->
+
   </body>
 
 </html>
