Title, Rainbow, Forms, vaildation styling added

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <base href="/">
     <meta charset="utf-8">
     <title>WDI Project 3</title>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway:200" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,400" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs_jyxXu7PGnWJz9uYx-dwJ4mmmaM3sF8"></script>
