--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDs_jyxXu7PGnWJz9uYx-dwJ4mmmaM3sF8"></script>
+    <script src="/path/to/bower_components/mh-dragdrop-image/dist/mh-dragdrop-image.min.js"></script>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
@@ -44,13 +45,7 @@
               <a class="nav-link" ui-sref="events" ng-if="main.isAuthenticated()">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" ui-sref="news" ng-if="main.isAuthenticated()">News</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" ui-sref="login" ng-if="!main.isAuthenticated()">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" ui-sref="register" ng-if="!main.isAuthenticated()">Register</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" ui-sref="usersShow({id: main.currentUserId })" ng-if="main.isAuthenticated()">Profile</a>
